--- a/index.html
+++ b/index.html
@@ -1,27 +1,64 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta content="width=device-width,initial-scale=1,maximum-scale=5,user-scalable=yes" name="viewport">
+  <meta charset="utf-8">
+  <!--
+  Customize this policy to fit your own app's needs. For more guidance, see:
+      https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
+  Some notes:
+      * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
+      * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
+      * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
+          * Enable inline JS: add 'unsafe-inline' to default-src
+  -->
+  <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content:">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="theme-color" content="#2196f3">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="msapplication-tap-highlight" content="no">
+  <title>Passarport</title>
 
-    <title></title>
-
-    <script src="https://www.wikitude.com/libs/architect.js"></script>
-    <script type="text/javascript" src="../ade.js"></script>
-
-    <link rel="stylesheet" href="css/default.css">
+  <link rel="stylesheet" href="framework7/css/framework7.min.css">
+  <link rel="stylesheet" href="css/icons.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
-
 <body>
-<div id="infoBox" class="info">
-    <div class="text">Scan Target &#35;1 (surfer):</div>
-    <div class="icons">
-        <img src='assets/surfer.png'/>
-    </div>
-</div>
-<div id="loadingMessage" class="info">Loading ...</div>
+  <div id="app">
+    <!-- Status bar overlay for fullscreen mode-->
+    <div class="statusbar"></div>
 
-<script src="js/imageontarget.js"></script>
+    <!-- Your main view, should have "view-main" class -->
+    <div class="view view-main ios-edges">
+      <!-- Page, data-name contains page name which can be used in callbacks -->
+      <div class="page" data-name="home">
+        <!-- Scrollable page content-->
+        <div class="page-content">
+          <div class="block block-strong">
+            <p>PASSARPORT APP</p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Cordova -->
+  <script src="cordova.js"></script>
+
+  <!-- Jquery -->
+  <script src="js/jquery-3.3.1.min.js"></script>
+
+  <!-- Framework7 library -->
+  <script src="framework7/js/framework7.min.js"></script>
+
+  <!-- App routes -->
+  <script src="js/routes.js"></script>
+
+  <!-- wikitude(AR) -->
+  <script src="js/WikitudePlugin.js"></script>
+
+  <!-- Your custom app scripts -->
+  <script src="js/app.js"></script>
 </body>
 </html>
