world initialize console log

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="block block-strong">
             <p>PASSARPORT APP</p>
           </div>
-
+          <a href="#" class="button button-raised button-fill" id="log">log</a>
         </div>
       </div>
     </div>
