--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,8 @@
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
+    <!-- wikitude(AR) -->
+    <script src="js/WikitudePlugin.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
         app.initialize();
